diesel_compile_tests/tests/fail/insertable_bad_table_name.stderr
error: `table_name` is either unexpected or has bad format
  --> $DIR/insertable_bad_table_name.rs:17:10
   |
17 | #[diesel(table_name(users))]
   |          ^^^^^^^^^^

error: `table_name` is either unexpected or has bad format
  --> $DIR/insertable_bad_table_name.rs:23:10
   |
23 | #[diesel(table_name)]
   |          ^^^^^^^^^^

error: expected identifier
  --> $DIR/insertable_bad_table_name.rs:29:23
   |
29 | #[diesel(table_name = true)]
   |                       ^^^^

error: expected identifier
  --> $DIR/insertable_bad_table_name.rs:35:23
   |
35 | #[diesel(table_name = "")]
   |                       ^^

error: expected identifier
  --> $DIR/insertable_bad_table_name.rs:41:23
   |
41 | #[diesel(table_name = "not a path")]
   |                       ^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `does`
  --> $DIR/insertable_bad_table_name.rs:47:23
   |
47 | #[diesel(table_name = does::not::exist)]
   |                       ^^^^ use of undeclared crate or module `does`
